--- a/vezba2.html
+++ b/vezba2.html
@@ -3,6 +3,7 @@
     <title>vezba2</title>
   </head>
   <body>
+    <h1>izmenjeni file</h1>
     <div class="div1">prvi div</div>
   </body>
 </html>
