--- a/vezba17.html
+++ b/vezba17.html
@@ -66,11 +66,11 @@
         <div>
           <label>Pol:</label>
           <div>
-            <input type="checkbox" id="musko" class="mali" />
+            <input type="radio" id="musko" class="mali" />
             <label for="musko">Muski</label>
           </div>
           <div>
-            <input type="checkbox" id="zensko" class="mali" />
+            <input type="radio" id="zensko" class="mali" />
             <label for="zensko">Zenski</label>
           </div>
         </div>
