--- a/vezba18.html
+++ b/vezba18.html
@@ -1,16 +1,16 @@
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/fbeae6cafe.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="vezba18.css" />
-    <!-- <style>
-      body {
-        background-image: url(/pozadina.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        background-attachment: fixed;
-        background-color: white;
-      }
-    </style>-->
   </head>
   <body>
     <header>
@@ -39,5 +39,68 @@
         flight and travelling destination.
       </h2>
     </section>
+    <section class="treca">
+      <h1 class="trecinaslov">The Perfect Travell</h1>
+      <h3 class="trecip">
+        We cover all everything from picking the perfect hotel <br />
+        to flight and destination.
+      </h3>
+      <div class="glavni">
+        <div class="horizontalni">
+          <div class="plava">
+            <i class="fas fa-route" style="font-size: 60px"></i>
+          </div>
+          <div class="beli">
+            <h2 class="naslovi">Travel</h2>
+            <p>Travel in over 250 countries with no effort.</p>
+          </div>
+        </div>
+        <div class="horizontalni">
+          <div class="plava">
+            <i class="fas fa-bed" style="font-size: 60px"></i>
+          </div>
+
+          <div class="beli">
+            <h2 class="naslovi">Hotel</h2>
+            <p>
+              Hotel located near popular <br />
+              areas.
+            </p>
+          </div>
+        </div>
+        <div class="horizontalni">
+          <div class="plava">
+            <i class="fas fa-plane-departure" style="font-size: 60px"></i>
+          </div>
+          <div class="beli">
+            <h2 class="naslovi">Flight</h2>
+            <p>Flight included in every purchased trip.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="cetvrta">
+      <div class="poslednji">
+        <h1 class="contactus">Contact us</h1>
+        <form action="">
+          <div class="labeli">
+            <label for="name">Name:</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="labeli">
+            <label for="email">Email:</label>
+
+            <input type="text" id="email" />
+          </div>
+          <button type="submit" class="dugme2">Submit</button>
+        </form>
+      </div>
+    </section>
+    <footer class="footer">
+      <h1 class="poslednjinaslov">Travelly</h1>
+      <i class="fab fa-instagram" style="font-size: 40px"></i>
+      <i class="fab fa-youtube" style="font-size: 40px"></i>
+      <i class="fab fa-facebook-square" style="font-size: 40px"></i>
+    </footer>
   </body>
 </html>
