--- a/prvisajt.html
+++ b/prvisajt.html
@@ -3,6 +3,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/fbeae6cafe.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="prvisajt.css" />
     <title>Document</title>
   </head>
@@ -20,5 +30,95 @@
       </ul>
       <button class="dugmeheader">Get Started</button>
     </header>
+    <section class="prvasekcija">
+      <div class="naslov">
+        <h1>
+          Elegant and <br />
+          creative solutions
+        </h1>
+        <h3>
+          We are team of talented designers <br />
+          making websites with Bootstrap
+        </h3>
+        <button class="getstarted">Get Started</button>
+        <button class="watchvideo">Watch Video</button>
+      </div>
+      <img src="./slika1.png" />
+    </section>
+    <section class="drugasekcija">
+      <div class="kartica">
+        <i class="fas fa-laptop"></i>
+        <h3>Lorem ipsum</h3>
+        <p>
+          Voluptatum deleniti atque corrupti quos dolores et quas molestias
+          excepturi sint occaecati cupiditate non provident
+        </p>
+      </div>
+      <div class="kartica">
+        <i class="fas fa-tasks"></i>
+        <h3>Lorem ipsum</h3>
+        <p>
+          Voluptatum deleniti atque corrupti quos dolores et quas molestias
+          excepturi sint occaecati cupiditate non provident
+        </p>
+      </div>
+      <div class="kartica">
+        <i class="far fa-chart-bar"></i>
+        <h3>Lorem ipsum</h3>
+        <p>
+          Voluptatum deleniti atque corrupti quos dolores et quas molestias
+          excepturi sint occaecati cupiditate non provident
+        </p>
+      </div>
+    </section>
+    <section class="trecasekcija">
+      <img src="./slika3.png" />
+      <div class="trecasekcijatext">
+        <h1>
+          Voluptatem dignissimos provident <br />
+          quasi corporis voluptates
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod <br />
+          tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <ul>
+          <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+          <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
+          <li>
+            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            <br />
+            irure dolor in reprehenderit in voluptate trideta storacalaperda
+          </li>
+        </ul>
+        <p>
+          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+          <br />
+          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+          <br />
+          fugiat nulla pariatur.
+        </p>
+      </div>
+    </section>
+    <section class="cetvrtasekcija">
+      <div>
+        <h1>232</h1>
+        <p>Clients</p>
+      </div>
+      <div>
+        <h1>521</h1>
+        <p>Projects</p>
+      </div>
+      <div>
+        <h1>1463</h1>
+        <p>Hours Of Support</p>
+      </div>
+      <div>
+        <h1>15</h1>
+        <p>Hard workers</p>
+      </div>
+    </section>
+    <section></section>
   </body>
 </html>
