--- a/prvisajt.html
+++ b/prvisajt.html
@@ -119,6 +119,61 @@
         <p>Hard workers</p>
       </div>
     </section>
-    <section></section>
+    <section class="petasekcija">
+      <h1>SERVICES</h1>
+      <p>
+        Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
+      </p>
+      <div class="divkartica">
+        <div>
+          <i class="fas fa-basketball-ball"></i>
+          <h3>Lorem impsum</h3>
+          <p>
+            Voluptatum deleniti atque corrupti quos dolores et quas molestias
+            excepturi
+          </p>
+        </div>
+        <div>
+          <i class="far fa-file-alt"></i>
+          <h3>Sed ut perspiciatis</h3>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-tachometer-alt"></i>
+          <h3>Magni Dolores</h3>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-globe-americas"></i>
+          <h3>Nemo Enim</h3>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-desktop"></i>
+          <h3>Dele cardo</h3>
+          <p>
+            Quis consequatur saepe eligendi voluptatem consequatur dolor
+            consequuntur
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-torii-gate"></i>
+          <h3>Divera don</h3>
+          <p>
+            Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit
+            aspernatur
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
