--- a/prvisajt.html
+++ b/prvisajt.html
@@ -175,5 +175,115 @@
         </div>
       </div>
     </section>
+    <section class="sestasekcija">
+      <h1>PORTFOLIO</h1>
+      <p>
+        Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
+      </p>
+      <div class="kategorije">
+        <ul>
+          <li>ALL</li>
+          <li>APP</li>
+          <li>CARD</li>
+          <li>WEB</li>
+        </ul>
+      </div>
+      <div class="divzaslike">
+        <div class="divzaslike1">
+          <div class="slika1">
+            <img src="./curology.jpg" class="slika1" />
+            <div class="slika4">
+              <img
+                src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-6.jpg"
+                class="slika4"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="divzaslike2">
+          <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-2.jpg"
+            class="slika2"
+          />
+          </div>
+          <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-5.jpg"
+            class="slika5"
+          />
+        </div>
+        <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-9.jpg"
+            class="slika7"
+          />
+        </div>
+        </div>
+         <div class="divzaslike3">
+           <div class="slika3">
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-3.jpg"
+            class="slika3"
+          />
+        </div>
+        <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-4.jpg"
+            class="slika6"
+          />
+        </div>
+        <div>
+          <img src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-7.jpg" class="slika8">
+        </div>
+        <div>
+          <img src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-8.jpg" class="slika9">
+        </div>
+         </div>
+        </div>
+       
+
+        <!--
+        <div class="slika1">
+          <img src="./curology.jpg" class="slika1" />
+        </div>
+        <div class="slika2">
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-2.jpg"
+            class="slika2"
+          />
+        </div>
+        <div class="slika3">
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-3.jpg"
+            class="slika3"
+          />
+        </div>
+        <div class="slika4">
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-6.jpg"
+            class="slika4"
+          />
+        </div>
+        <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-5.jpg"
+            class="slika5"
+          />
+        </div>
+        <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-4.jpg"
+            class="slika6"
+          />
+        </div>
+        <div>
+          <img
+            src="https://bootstrapmade.com/demo/templates/eNno/assets/img/portfolio/portfolio-9.jpg"
+            class="slika7"
+          />
+        </div>
+      --></div>
+    </section>
   </body>
 </html>
