--- a/prvisajt.html
+++ b/prvisajt.html
@@ -281,6 +281,52 @@
   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <br> sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <button>CALL TO ACTION</button>
 </section>
-  
+<section class="devetasekcija">
+<h1>
+TEAM
+</h1>
+<p>
+  Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
+</p>
+<div class="teamdiv">
+<div>
+  <img src="https://bootstrapmade.com/demo/templates/eNno/assets/img/team/team-1.jpg">
+<h3>Walter White</h3>
+<h6>Chief Executive Officer</h6>
+<p>Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+<aside class="ikonice">
+<i class="fab fa-twitter"><a href="#"></a></i>
+<i class="fab fa-facebook"><a href="#"></a></i>
+<i class="fab fa-instagram"><a href="#"></a></i>
+<i class="fab fa-linkedin"><a href="#"></a></i>
+</aside>
+</div>
+<div>
+  <img src="https://bootstrapmade.com/demo/templates/eNno/assets/img/team/team-2.jpg" >
+  <h3>Sarah Jhinson</h3>
+<h6>Product Manager</h6>
+<p>Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus</p>
+<aside class="ikonice">
+<i class="fab fa-twitter"><a href="#"></a></i>
+<i class="fab fa-facebook"><a href="#"></a></i>
+<i class="fab fa-instagram"><a href="#"></a></i>
+<i class="fab fa-linkedin"><a href="#"></a></i>
+</aside>
+</div>
+<div>
+<img src="https://bootstrapmade.com/demo/templates/eNno/assets/img/team/team-3.jpg" >
+<h3>Wiliam Anderson</h3>
+<h6>CTO</h6>
+<p>Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara</p>
+<aside class="ikonice">
+<i class="fab fa-twitter" ><a href="#"></a></i>
+<i class="fab fa-facebook"><a href="#"></a></i>
+<i class="fab fa-instagram"><a href="#"></a></i>
+<i class="fab fa-linkedin"><a href="#"></a></i>
+</aside>
+</div>
+</div>
+</section>
+
   </body>
 </html>
