--- a/prvisajt.html
+++ b/prvisajt.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="prvisajt.css" />
-    <title>Document</title>
+    <title>Prvi sajt</title>
   </head>
   <body>
     <header>
@@ -326,6 +326,83 @@ TEAM
 </aside>
 </div>
 </div>
+</section>
+<section class="desetasekcija">
+<h1>CONTACT</h1>
+<p >Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
+</p>
+<div class="contactsekcija">
+<div class="location">
+<div class="locationredovi">
+  <div class="ikonicecontact">
+  <i class="fas fa-map-marker-alt"></i>
+  </div>
+  <div class="textcontact">
+  <h1>Location:</h1>
+  <p>A108 Adam Street, New York, NY 535022</p>
+</div>
+</div>
+<div class="locationredovi">
+  <div class="ikonicecontact">
+ <i class="far fa-envelope"></i>
+  </div>
+  <div class="textcontact">
+  <h1>Email:</h1>
+  <p>info@example.com</p>
+</div>
+</div>
+<div class="locationredovi">
+  <div class="ikonicecontact">
+  <i class="fas fa-mobile-alt"></i>
+  </div>
+  <div class="textcontact">
+  <h1>Call:</h1>
+  <p>+1 5589 55488 55s</p>
+</div>
+</div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46579.22955472045!2d20.480403268773248!3d43.14229053840318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4756283de66eab45%3A0x2ea7623f36196cd8!2sNovi%20Pazar!5e0!3m2!1sen!2srs!4v1639315883418!5m2!1sen!2srs" width="420" height="350" style="border:0; margin-top: 20px;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+<form class="forma">
+  <div class="prvadvalabela">
+  <div>
+  <label for="name">Your Name</label>
+  <input type="text" id="name">
+  </div>
+  <div>
+  <label for="email">Your Email</label>
+  <input type="text" id="email">
+</div>
+  </div>
+  <div class="subject">
+  <label for="subject">Subject</label>
+  <input type="text" id="subject">
+  </div>
+  <div class="subject">
+  <label for="message">Message</label>
+  <textarea name="message" id="" cols="79" rows="16"></textarea>
+  </div>
+  <button>Send massage</button>
+</form>
+</div>
+</section>
+<section class="jedanaestasekcija">
+<h1>eNno</h1>
+<p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime <br> saepe commodi placeat.</p>
+<div class="enteremail">
+  <input type="text" placeholder="Enter your email">
+  <button type="submit">Subscribe</button>
+  </div>
+  <div class="ikoniceposlednji">
+<i class="fab fa-twitter"></i>
+<i class="fab fa-facebook-f"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-skype"></i>
+<i class="fab fa-linkedin-in"></i>
+  </div>
+  <footer>
+    <div>© Copyright eNno. All Rights Reserved</div>
+    <div class="designed">Designed by Vahid Gasanin</div>
+  </footer>
 </section>
 
   </body>
