--- a/prvi sajt/prvisajt.html
+++ b/prvi sajt/prvisajt.html
@@ -20,17 +20,17 @@
     <header>
       <h1>eNno</h1>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Services</li>
-        <li>Portfolio</li>
-        <li>Team</li>
-        <li>Dropdown</li>
-        <li>Contact</li>
+        <li> <a href="#1">Home</a></li>
+        <li> <a href="#2">About</a></li>
+        <li><a href="#5">Services</a></li>
+        <li><a href="#6">Portfolio</a></li>
+        <li><a href="#9">Team</a></li>
+        <li><a href="#9">Dropdown</a></li>
+        <li><a href="#10">Contact</a></li>
       </ul>
       <button class="dugmeheader">Get Started</button>
     </header>
-    <section class="prvasekcija">
+    <section class="prvasekcija" id="1">
       <div class="naslov">
         <h1>
           Elegant and <br />
@@ -45,7 +45,7 @@
       </div>
       <img src="./slika1.png" />
     </section>
-    <section class="drugasekcija">
+    <section class="drugasekcija" id="2">
       <div class="kartica">
         <i class="fas fa-laptop"></i>
         <h3>Lorem ipsum</h3>
@@ -62,7 +62,7 @@
           excepturi sint occaecati cupiditate non provident
         </p>
       </div>
-      <div class="kartica">
+      <div class="kartica" >
         <i class="far fa-chart-bar"></i>
         <h3>Lorem ipsum</h3>
         <p>
@@ -71,7 +71,7 @@
         </p>
       </div>
     </section>
-    <section class="trecasekcija">
+    <section class="trecasekcija" id="3">
       <img src="./slika3.png" />
       <div class="trecasekcijatext">
         <h1>
@@ -101,7 +101,7 @@
         </p>
       </div>
     </section>
-    <section class="cetvrtasekcija">
+    <section class="cetvrtasekcija" id="4">
       <div>
         <h1>232</h1>
         <p>Clients</p>
@@ -119,7 +119,7 @@
         <p>Hard workers</p>
       </div>
     </section>
-    <section class="petasekcija">
+    <section class="petasekcija" id="5">
       <h1>SERVICES</h1>
       <p>
         Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
@@ -175,7 +175,7 @@
         </div>
       </div>
     </section>
-    <section class="sestasekcija">
+    <section class="sestasekcija" id="6">
       <h1>PORTFOLIO</h1>
       <p>
         Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
@@ -243,7 +243,7 @@
         </div>
         </div>
     </section>
-  <section class="sedmasekcija">
+  <section class="sedmasekcija" id="7">
     <h1>
       TESTIMONIALS
     </h1>
@@ -276,12 +276,12 @@
     </div>
     </div>
   </section>
-<section class="osmasekcija">
+<section class="osmasekcija" id="8">
   <h1>Call to Action</h1>
   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <br> sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <button>CALL TO ACTION</button>
 </section>
-<section class="devetasekcija">
+<section class="devetasekcija" id="9">
 <h1>
 TEAM
 </h1>
@@ -327,7 +327,7 @@ TEAM
 </div>
 </div>
 </section>
-<section class="desetasekcija">
+<section class="desetasekcija" id="10">
 <h1>CONTACT</h1>
 <p >Sit sint consectetur velit quisquam cupiditate impedit suscipit alias
 </p>
@@ -385,7 +385,7 @@ TEAM
 </form>
 </div>
 </section>
-<section class="jedanaestasekcija">
+<section class="jedanaestasekcija" id="11">
 <h1>eNno</h1>
 <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime <br> saepe commodi placeat.</p>
 <div class="enteremail">
