--- a/html-css deo/index3.html
+++ b/html-css deo/index3.html
@@ -17,7 +17,7 @@
       <i class="fab fa-linkedin"></i>
     </header>
     <div class="container">
-      <h1>Sign up</h1>
+      <h1>Sign in</h1>
       <p>Stay updated on your professional world</p>
       <input type="text" placeholder="Email or Phone" />
       <input type="password" placeholder="Password" />
