--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -8,6 +8,8 @@
   <body>
     <div class="main">
       <h1 id="heading">Naslov</h1>
+      <h1 id="drugi">Drugi naslov brateeeee</h1>
+      <h2 id="treci">treci naslov hairli bilo</h2>
     </div>
 
     <script src="./vezba23.js"></script>
