--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="main">
-      <h1 id="heading">Naslov</h1>
+    <div class="main" id="main">
+      <!-- <h1 id="heading">Naslov</h1> 
       <h1 id="drugi">Drugi naslov brateeeee</h1>
       <h2 id="treci">treci naslov hairli bilo</h2>
+      --->
     </div>
 
     <script src="./vezba23.js"></script>
