--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -6,11 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="main" id="main">
-      <!-- <h1 id="heading">Naslov</h1> 
-      <h1 id="drugi">Drugi naslov brateeeee</h1>
-      <h2 id="treci">treci naslov hairli bilo</h2>
-      --->
+    <div id="main" style="border: 1px solid red">
+      <h1 onclick="klik()">ja sam naslov</h1>
+      <button onclick="dugme">Samo me stisni</button>
     </div>
 
     <script src="./vezba23.js"></script>
