--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -8,7 +8,7 @@
   <body>
     <div id="main" style="border: 1px solid red">
       <h1 onclick="klik()">ja sam naslov</h1>
-      <button onclick="dugme">Samo me stisni</button>
+      <button id="dva" onclick="dugme()" on>Samo me stisni</button>
     </div>
 
     <script src="./vezba23.js"></script>
