--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -4,10 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .naslovKlasa {
+        color: brown;
+      }
+    </style>
   </head>
   <body>
     <div id="main" style="border: 1px solid red">
-      <h1 onclick="klik()">ja sam naslov</h1>
+      <h1 onclick="klik()" id="tri">ja sam naslov</h1>
       <button id="dva" onclick="dugme()" on>Samo me stisni</button>
     </div>
 
