--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -7,6 +7,8 @@
     <style>
       .naslovKlasa {
         color: brown;
+        background-color: yellow;
+        font-size: xx-large;
       }
     </style>
   </head>
