--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -15,7 +15,7 @@
   <body>
     <div id="main" style="border: 1px solid red">
       <h1 onclick="klik()" id="tri">ja sam naslov</h1>
-      <button id="dva" onclick="dugme()" on>Samo me stisni</button>
+      <button id="dva" onclick="dugme()" on>preuzmi podatke</button>
     </div>
 
     <script src="./vezba23.js"></script>
