--- a/js-deo/vezba23/vezba23.html
+++ b/js-deo/vezba23/vezba23.html
@@ -14,8 +14,14 @@
   </head>
   <body>
     <div id="main" style="border: 1px solid red">
-      <h1 onclick="klik()" id="tri">ja sam naslov</h1>
-      <button id="dva" onclick="dugme()" on>preuzmi podatke</button>
+      <form action="">
+        <input type="email" id="email" />
+        <input type="text" id="name" />
+        <input type="password" id="password" />
+        <input type="text" id="username" />
+
+        <button id="dva" type="submit">preuzmi podatke</button>
+      </form>
     </div>
 
     <script src="./vezba23.js"></script>
